corrected footer spacing issue on home page

--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ span:first-letter {
 /* CodeDeveloper */
 
 .page-bg-blue {
-  background: #6ba5f1cb;
+  background: #91c1ffcb;
   background-attachment: fixed;
   min-height: 100vh;
 }
